--- a/tests/wasm-check.html
+++ b/tests/wasm-check.html
@@ -15,11 +15,15 @@
       instance.FS.writeFile("/fonts/LiberationSans-Regular.ttf",
         new Uint8Array(await (await fetch("../fonts/Liberation-2.00.1/ttf/LiberationSans-Regular.ttf")).arrayBuffer()));
 
+      instance.FS.writeFile("lib.scad", `
+        test_text = "Hello";
+      `);
       instance.FS.writeFile("input.scad", `
+        include <lib.scad>;
         $fn=64;
         difference() {
             linear_extrude(height = 20, center=true)
-                text("Hello", size=10, halign="center", valign="center", font="Liberation Sans");
+                text(test_text, size=10, halign="center", valign="center", font="Liberation Sans");
             sphere(r=10);
         }
       `);
